# Dinoly

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
config/: config.dev.yaml  config.example.yaml  config.prod.yaml  config.test.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20221121_170216_create_user_table.rs  m20221213_173521_create_url_table.rs
scripts/: init_db.sh
src/: configuration.rs  cors.rs  lib.rs  main.rs  router.rs  server.rs  telemetry.rs
src/dto/: mod.rs  url.rs  user.rs
src/entity/: mod.rs  prelude.rs  sea_orm_active_enums.rs  url.rs  user.rs
src/handler/: health_check.rs  mod.rs  status_handler.rs
src/handler/helpers/: api_error.rs  api_response.rs  field_error.rs  mod.rs
src/handler/url_handler/: create_url_handler.rs  delete_url_handler.rs  get_url_handler.rs  get_url_list_handler.rs  mod.rs  update_url_handler.rs
src/handler/user_handler/: login_handler.rs  me_handler.rs  mod.rs  register_handler.rs
src/handler/utils/: auth.rs  hash.rs  jwt.rs  mod.rs
tests/api/: health_check.rs  main.rs  user_handler.rs
tests/api/helpers/: json.rs  mod.rs  server.rs  testing.rs
tests/api/inputs/: create_url_handler_inputs.json  register_user_handler_inputs.json
tests/api/link_handler/: create_handler.rs  delete_handler.rs  get_handler.rs  mod.rs  update_handler.rs
tests/api/seeds/: links.rs  mod.rs  users.rs
