[package]
name = "dinoly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dinoly"
path = "src/main.rs"


[dependencies]
axum = "0.5.17"
config = "0.13.2"
hyper = "0.14.23"
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.1.0"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
hyper = { version = "0.14.23", features = ["client"] }
