[package]
name = "dinoly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dinoly"
path = "src/main.rs"


[dependencies]
axum = { version = "0.6.1", features = ["headers", "macros"] }
config = "0.13.2"
erased-serde = "0.3.23"
hyper = "0.14.23"
sea-orm = { version = "0.10.3", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx",
] }
argon2 = "0.4.1"
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.1.0"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
jsonwebtoken = "8.2.0"
chrono = "0.4.23"

[dev-dependencies]
assert-json-diff = "2.0.2"
tower = { version = "0.4.13", features = ["util"] }
hyper = { version = "0.14.23", features = ["client"] }
migration = { path = "migration" }
fake = { version = "2.5", features = ["uuid", "chrono"] }
rand = "0.8"
